--- a/.github/workflows/build_apk.yml
+++ b/.github/workflows/build_apk.yml
@@ -1,30 +1,43 @@
-name: Build Flutter APK
+name: Flutter Build APK
+
 on:
-push:
-branches:
-- main
+  push:
+    branches: [ "main" ] # ทำงานเมื่อมีการ Push ไปที่ main
+  pull_request:
+    branches: [ "main" ]
 
 jobs:
-build:
-runs-on: ubuntu-latest
+  build:
+    runs-on: ubuntu-latest
 
-steps:
-- name: Checkout source
-uses: actions/checkout@v4
+    steps:
+      - uses: actions/checkout@v4
 
-- name: Set up Flutter
-uses: subosito/flutter-action@v2
-with:
-flutter-version: '3.19.0'
+      # 1. ติดตั้ง Java (จำเป็นสำหรับการ Build Android)
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          java-version: '17'
+          distribution: 'temurin'
 
-- name: Install dependencies
-run: flutter pub get
+      # 2. ติดตั้ง Flutter
+      - name: Set up Flutter
+        uses: subosito/flutter-action@v2
+        with:
+          flutter-version: '3.x' # หรือระบุเวอร์ชันที่คุณใช้
+          channel: 'stable'
 
-- name: Build APK (Release)
-run: flutter build apk --release
+      # 3. ดึง Dependencies
+      - name: Install dependencies
+        run: flutter pub get
 
-- name: Upload APK
-uses: actions/upload-artifact@v4
-with:
-name: app-release
-path: build/app/outputs/flutter-apk/app-release.apk
+      # 4. Build APK
+      - name: Build APK
+        run: flutter build apk --release
+
+      # 5. เก็บไฟล์ APK ไว้ให้ดาวน์โหลด (Artifacts)
+      - name: Upload APK
+        uses: actions/upload-artifact@v4
+        with:
+          name: release-apk
+          path: build/app/outputs/flutter-apk/app-release.apk
